Throw something up, will ya

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,4 @@
-# :wave: Hello, world!
+# :wave: About Me
 
-This is MDX!
+I'm a "full-stack developer", which is in quotes because I mainly do front-end but I somehow find my way around the back-end every once in a while.
+I currently work for [JW Player](https://www.jwplayer.com/), specifically on the tools that help our customers publish content.
