--- a/pages/resources.mdx
+++ b/pages/resources.mdx
@@ -4,6 +4,6 @@
 
 This is how I set up a new Mac from scratch. You may be asking "why do we need to see this, Alex?". It's more here for me than it is for you - but if anyone can gain anything from it, I guess that's good.
 
-```
-this is a motherfucking code block
+```javascript
+jwplayer(data).setup({ something: 'something' });
 ```
