--- a/pages/resources/mac-setup.mdx
+++ b/pages/resources/mac-setup.mdx
@@ -1,6 +1,4 @@
-# Resources
-
-### Mac Setup
+# Mac Setup
 
 This is how I set up a new Mac from scratch. You may be asking "why do we need to see this, Alex?". It's more here for me than it is for you - but if anyone can gain anything from it, I guess that's good.
 
